# Talk2EP

./: .gitignore  README.md
EnergyPlus-MCP/energyplus-mcp-server/: .dockerignore  pyproject.toml
EnergyPlus-MCP/energyplus-mcp-server/energyplus_mcp_server/: __init__.py  config.py  energyplus_tools.py  server.py
EnergyPlus-MCP/energyplus-mcp-server/energyplus_mcp_server/utils/: __init__.py  diagrams.py  electric_equipment_utils.py  lights_utils.py  output_meters.py  output_variables.py  path_utils.py  people_utils.py  schedules.py
EnergyPlus-MCP/energyplus-mcp-server/illustrative examples/: 5ZoneAirCooled.idf  5ZoneAirCooled_improved.idf
EnergyPlus-MCP/energyplus-mcp-server/illustrative examples/5ZoneAirCooled/: 5ZoneAirCooled.bnd  5ZoneAirCooled.csv  5ZoneAirCooled.eio  5ZoneAirCooled.end  5ZoneAirCooled.err  5ZoneAirCooled.eso  5ZoneAirCooled.rdd  5ZoneAirCooled.rvaudit  5ZoneAirCooled.wrl  5ZoneAirCooledSsz.csv  5ZoneAirCooledTable.htm  5ZoneAirCooledZsz.csv
EnergyPlus-MCP/energyplus-mcp-server/illustrative examples/5ZoneAirCooled_improved/: 5ZoneAirCooled_improved.audit  5ZoneAirCooled_improved.csv  5ZoneAirCooled_improved.eio  5ZoneAirCooled_improved.end  5ZoneAirCooled_improved.err  5ZoneAirCooled_improved.eso  5ZoneAirCooled_improved.mdd  5ZoneAirCooled_improved.mtd  5ZoneAirCooled_improved.rdd  5ZoneAirCooled_improved.rvaudit  5ZoneAirCooled_improvedSsz.csv  5ZoneAirCooled_improvedTable.htm  5ZoneAirCooled_improvedZsz.csv
EnergyPlus-MCP/energyplus-mcp-server/sample_files/: 1ZoneEvapCooler.idf  1ZoneUncontrolled.idf  5ZoneAirCooled_with_outputs.idf
EnergyPlus-MCP/energyplus-mcp-server/tests/: __init__.py
demo/: .env.example  2.0.0  agent.py  config.py  environment.yml  knowledge.py  main.py  mcp_client.py  pyproject.toml  start_mcp_server.py  tools.py
sliders/: .example.env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  step_viewer.py
sliders/configs/: finance_bench_direct_tool_use.yaml  finance_bench_direct_without_tool_use.yaml  finance_bench_sliders_agent.yaml  finance_bench_sliders_sample.yaml  loong_direct_tool_use.yaml  loong_direct_without_tool_use.yaml  loong_rlm_use_finance.yaml  loong_sliders.yaml  loong_sliders_sample.yaml
sliders/docs/: ARCHITECTURE.md  CONFIG.md  DEVELOPMENT.md  EXPERIMENTS.md
sliders/scripts/: convert_txt_to_pdf.py  cost_calculation.py  error_analysis_viewer.py  generate_babilong_data.py  llm_try.py  pdf_to_markdown.py  prompt_viewer.py  table_viewer.py  test_error_analysis.py
sliders/sliders/: baselines.py  datasets.py  document.py  evaluation.py  experiment.py  globals.py  llm_models.py  log_utils.py  markdown_utils.py  runner.py  system.py  utils.py
sliders/sliders/callbacks/: logging.py
sliders/sliders/chunkers/: chunker.py  contextual.py
sliders/sliders/experimental/: aligner.py  tokenizer.py
sliders/sliders/experiments/: babilong.py  base.py  finance_bench.py  loong.py
sliders/sliders/llm/: llm.py  prompts.py
sliders/sliders/llm_tools/: code.py  sql.py
sliders/sliders/modules/: extract_schema.py  generate_schema.py  merge_chain_agent.py  merge_schema.py
sliders/sliders/rlm/: __init__.py  repl.py  rlm.py  rlm_repl.py
(+47 files in other folders)
